crates/strider-analyze/tests/snapshots/v3__arm_be__calling_convention__sink16.snap
---
source: crates/strider-analyze/tests/v3_baseline.rs
assertion_line: 177
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#88cc88", label=r0, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#88cc88", label=r1, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#88cc88", label=d0, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#88cc88", label=d1, fontcolor="#cccccc", fontsize=9];
  "6" [label="init\nd1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "5" [label="init\nd0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "4" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "8" -> "4" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "8" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "9" -> "8" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "10" -> "8" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "10" [label="const 0x2c:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "9" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "7" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "11" -> "7" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v12" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v12" -> "7" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "13" -> "7" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "13" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "11" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "14" -> "11" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v15" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v15" -> "11" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "16" -> "11" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "16" [label="init\nr3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "14" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "17" -> "14" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v18" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v18" -> "14" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "19" -> "14" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "19" [label="init\nr2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "17" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "20" -> "17" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v21" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v21" -> "17" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "22" -> "17" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "22" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "20" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "23" -> "20" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v24" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v24" -> "20" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "25" -> "20" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "25" [label="init\nr0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "23" [label="MemPartition[MemPartitionId(0)]", shape=trapezium, fillcolor="#3a1a4a"];
  "26" -> "23" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "26" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "3" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "27" -> "3" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "4" -> "3" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "27" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "28" -> "27" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "29" -> "27" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "29" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "29" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "30" -> "29" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "30" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "9" -> "30" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "31" -> "30" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "31" [label="const 0x100000028:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "28" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "32" -> "28" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "33" -> "28" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "33" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "33" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "34" -> "33" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "34" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "9" -> "34" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "35" -> "34" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "35" [label="const 0x100000024:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "32" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "36" -> "32" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "37" -> "32" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "37" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "37" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "38" -> "37" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "38" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "9" -> "38" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "39" -> "38" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "39" [label="const 0x100000020:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "36" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "40" -> "36" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "41" -> "36" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "41" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "41" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "42" -> "41" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "42" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "9" -> "42" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "43" -> "42" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "43" [label="const 0x10000001c:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "40" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "44" -> "40" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "45" -> "40" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "45" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "45" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "46" -> "45" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "46" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "9" -> "46" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "47" -> "46" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "47" [label="const 0x100000018:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "44" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "48" -> "44" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "49" -> "44" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "49" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "49" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "50" -> "49" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "50" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "9" -> "50" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "51" -> "50" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "51" [label="const 0x100000014:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "48" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "52" -> "48" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "53" -> "48" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "53" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "53" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "54" -> "53" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "54" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "9" -> "54" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "55" -> "54" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "55" [label="const 0x100000010:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "52" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "56" -> "52" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "57" -> "52" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "57" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "57" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "58" -> "57" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "58" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "9" -> "58" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "59" -> "58" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "59" [label="const 0x10000000c:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "56" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "60" -> "56" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "61" -> "56" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "61" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "61" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "62" -> "61" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "62" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "9" -> "62" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "63" -> "62" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "63" [label="const 0x100000008:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "60" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "64" -> "60" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "65" -> "60" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "65" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "65" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "66" -> "65" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "66" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "9" -> "66" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "67" -> "66" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "67" [label="const 0x100000004:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "64" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "68" -> "64" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "69" -> "64" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "69" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "69" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "9" -> "69" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "68" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "70" -> "68" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "16" -> "68" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "70" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "71" -> "70" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "19" -> "70" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "71" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "25" -> "71" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "22" -> "71" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "2" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "72" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "72" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "7" -> "72" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v73" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v73" -> "72" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "3" -> "72" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
}
